--- a/Covid-19/ehpad.html
+++ b/Covid-19/ehpad.html
@@ -14,7 +14,8 @@
     <style>
     
         p {
-         font-family: Helvetica   
+         font-family: Helvetica;
+         line-height: 150%  
         }
 
     </style>
