--- a/Covid-19/vaccination.html
+++ b/Covid-19/vaccination.html
@@ -84,8 +84,9 @@
                     }
                 },
                 responsive: true,
-                maintainAspectRatio: true,
-                legend: { 
+                aspectRatio: 1,
+		maintainAspectRatio: true,
+		legend: { 
                     position: 'top', 
                     fullWidth: false
                 },
