--- a/Covid-19/vaccination.html
+++ b/Covid-19/vaccination.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graph test</title>
+    <title>Covid-19 | Vaccination quotidienne</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-    <title>Document</title>
+
 </head>
 <body>
     <p style="font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif; font-size: 12 px">Nombre de personnes par jour recevant leur première ou leur deuxième dose de vaccin contre le Covid-19</p>
