--- a/Covid-19/contaminations.html
+++ b/Covid-19/contaminations.html
@@ -94,6 +94,7 @@
                     }
                 },
                 responsive: true,
+		aspectRatio: 1,
                 maintainAspectRatio: true,
                 legend: { 
                     position: 'top', 
