--- a/Covid-19/indicateurs.html
+++ b/Covid-19/indicateurs.html
@@ -247,7 +247,7 @@
 
 
 <h2 class="mt-24px lg:mt-40px">Décès dus au Covid-19</h2>
-<p class="mt-24px lg:mt-40px">Nombre de personnes décédées à l'hôpital au cours des sept jours précédents</p>
+<p class="mt-24px lg:mt-40px">Nombre de personnes décédées à l'hôpital et en établissements médico-sociaux (Ehpad, etc.) au cours des sept jours précédents</p>
 
 <canvas id="chart3" class="chartjs mt-24px lg:mt-40px"></canvas>
 
@@ -354,9 +354,8 @@
   }
 
 </script>
-<p style="font-size: 0.9em;" class="mt-24px lg:mt-40px">Source : Ministère de la Santé / Data.gouv.fr</p>
-<p class="mt-24px lg:mt-40px">Ce graphique est mis à jour le mardi. Les données fournies par le ministère de la Santé
-  concernant les décès en Ehpad et autres établissements médico-sociaux ne permettent d’afficher ceux-ci sur le graphique qu’à partir de la semaine du 9 au 16 février 2021. Auparavant, 23&nbsp;671&nbsp;décès avaient déjà été enregistrés dans ces établissements.</p>
+<p style="font-size: 0.9em;" class="mt-24px lg:mt-40px">Source : Santé publique France / Data.gouv.fr</p>
+<p class="mt-24px lg:mt-40px">Ce graphique est mis à jour le mardi. Les données fournies par Santé publique France concernant les décès en Ehpad et autres établissements médico-sociaux ne permettent d’afficher ceux-ci sur le graphique qu’à partir de la semaine du 9 au 16 février 2021. Auparavant, 23&nbsp;671&nbsp;décès avaient déjà été enregistrés dans ces établissements.</p>
 <p class="mt-24px lg:mt-40px">Voir <a href="https://www.brief.me/graphique/coronavirus/france/vaccination/"
            title="Avancement de la vaccination en France">nos graphiques sur l’avancement de la vaccination en
   France</a></p>
